added back button and slideshow

--- a/fovourite.html
+++ b/fovourite.html
@@ -28,7 +28,7 @@
         <div class="author">
             <div class="buttons">
                 <i class="fa-solid fa-copy"></i>
-                 <button class="tweet">tweet</button>
+                 <button class="Back">tweet</button>
                 <button class="new-qoute" id="next">new qoute</button>
             </div>
         <!-- ends -->
