--- a/qoutes.html
+++ b/qoutes.html
@@ -31,7 +31,7 @@
             <div class="buttons">
                 <i class="fa-solid fa-copy" 
                 ></i>
-                 <button class="tweet">tweet</button>
+                 <button class="Back">Back</button>
                 <button class="new-qoute" id="next">next qoute</button>
             </div>
         <!-- ends -->
